...
    when (style) {
        PopupCloseButtonStyle.Grabber -> {
            val collapseDescription = stringResource(R.string.popupbar_collapse)
            Box(
                modifier
                    .size(width = GrabberTouchTargetWidth, height = GrabberTouchTargetHeight)
                    .testTag("popupbar:close")
                    .semantics { contentDescription = collapseDescription }
                    .clickable(role = Role.Button, onClick = onClick),
                contentAlignment = Alignment.TopCenter,
            ) {
                Box(
                    Modifier
...
