...
import androidx.compose.ui.text.style.TextOverflow
import androidx.compose.ui.unit.dp
import com.fethica.popupbar.PopupContentScope

@Composable
internal fun NowPlayingContent(
    player: FakePlayer,
    scope: PopupContentScope,
    scrollable: Boolean,
) {
    if (scrollable) {
        LazyColumn(
            Modifier
...
